[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "users_api"
version = "0.0.1"
authors = [
  { name="Danny Torres", email="danny.torresxd@gmail.com" },
]
description = "Users API service"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "flask",
]

[project.urls]
Homepage = "https://github.com/locojuhi/users_api"
Issues = "https://github.com/locojuhi/user_api/issues"
